--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.13",
     "typescript": "4.9.5"
   }
