--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,11 @@
 {
-    "extends": [
-        "next/core-web-vitals"
-    ],
-    "rules": {
-        "at-rule-no-unknown": [
-            true,
-            {
-                "ignoreAtRules": [
-                    "tailwind",
-                    "apply",
-                    "variants",
-                    "responsive",
-                    "screen"
-                ]
-            }
-        ]
-    }
+  "extends": ["next/core-web-vitals"],
+  "rules": {
+    "at-rule-no-unknown": [
+      0,
+      {
+        "ignoreAtRules": ["tailwind", "apply", "variants", "responsive", "screen"]
+      }
+    ]
+  }
 }
